agregue suscirpcion y azul

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@ body
     font-family: "Courier";
     color: :read-only;
 =======
-    color: #333;
+    color: blue;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
